# spatially-partitioned-geoparquet

./: .gitignore  README.md  files.txt  manual_hilbert.py  manual_shuffle.py  pyproject.toml  shuffle.py  visualize_bounds.py
manual-hilbert-shuffle/: README.md  coords.py  extension_types.py  manual_shuffle.py  pyproject.toml  to_geoarrow.py
naive-dask-geopandas/: README.md  pyproject.toml  shuffle.py
pyflatbush/: README.md  global_identifier.py  hilbert.py  pyproject.toml
rstar/: README.md  pyproject.toml
