[tool.poetry]
name = "building-footprints-geoparquet"
version = "0.1.0"
description = "Exploring spatially-partitioned GeoParquet"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^7.0.0"
geopandas = "^0.10.2"
dask-geopandas = "^0.1.0"
pygeos = "^0.12.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
