[tool.poetry]
name = "building-footprints-geoparquet"
version = "0.1.0"
description = "Exploring spatially-partitioned GeoParquet"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^8.0.0"
geopandas = "^0.10.2"
dask-geopandas = "^0.1.0"
pygeos = "^0.12.0"
dask = {version = "^2022.5.0", extras = ["dataframe"]}
distributed = "^2022.5.0"
bokeh = "^2.4.2"
jupyter-server-proxy = "^3.2.1"
click = "^8.1.3"
geojson = "^2.5.0"
keplergl-cli = "^0.3.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
