[tool.poetry]
name = "manual-hilbert-shuffle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.10.2"
click = "^8.1.3"
numpy = "^1.22.4"
pandas = "^1.4.2"
pyarrow = "^9.0.0"
pygeos = "^0.12.0"
dask-geopandas = "^0.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
