[tool.poetry]
name = "naive-dask-geopandas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dask = {version = "^2022.5.2", extras = ["dataframe"]}
dask-geopandas = "^0.1.0"
pygeos = "^0.12.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
