[tool.poetry]
name = "rstar-not-the-real-rstar"
version = "0.1.0"
description = ""
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rstar = "^0.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
